--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,12 @@
 extends layout
 
 block content
-  form(action='/' method='post')
+  form(action='/message' method='post')
     input(type='text' name='name' placeholder='name')
     div
       input(type='text' name='text' placeholder='message')
       div
         input(type='submit' value='send' name='sendBtn')
-
-  form(action='/upload' method='post')
-    input(type='file')
-    div
-      input(type='submit' value='send image' name='sendImg')
-  div(id='workspace')
-    script(src='../ssr.js')
+  form(action='/upload')
+    input(type='submit' value='to upload page')
+    //- script(src='../ssr.js')
