・READMEファイルの追記

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
       input(type='submit',value='to upload page',class='btn btn-primary')
   a(class='menu-toggle rounded', href='#')
     i(class='fas fa-bars')
-  nav(id='sidebar-wrapper',class='active')
+  nav(id='sidebar-wrapper',class='')
     ul(calss='sidebar-nav')
       li(class='sidebar-brand')
         a(calss='js-scroll-triggr',href='#page-top') menu
